# deep-learning-intent-json

./: .gitignore  README.md  main.py  pyproject.toml
aimodel/: load_data.py  process_sentences.py  tokenize_words.py  transformer_model.py
intentchat/: chatbot_for_intents.py
intentfiles/: README.md  testA_intents.json
intenttrain/: train_intents.py
modelweights/: README.md
mylibrary/: context_managers.py
